# Musify

./: .gitignore  AGENTS.md  NETEASE_LYRICS_PROVIDER.md  README.md  development_guide.md  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  build_pr.yml  build_quick.yml  pr_title_prefix.yml  release.yml  test_build.yml
app/: build.gradle.kts  generate_proto.sh  guide.md  proguard-rules.pro
app/schemas/com.metrolist.music.db.InternalDatabase/: 34.json  35.json  36.json
app/src/gms/kotlin/com/metrolist/music/cast/: CastOptionsProvider.kt
app/src/gms/kotlin/com/metrolist/music/playback/: CastConnectionHandler.kt
app/src/izzy/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/vibrafp/lib/: CMakeLists.txt
app/src/main/kotlin/com/metrolist/music/: App.kt  MainActivity.kt
app/src/main/kotlin/com/metrolist/music/api/: GoogleTranslateService.kt  OpenRouterService.kt  OpenRouterStreamingService.kt
app/src/main/kotlin/com/metrolist/music/constants/: LibraryFilter.kt  NavigationScreens.kt  PreferenceKeys.kt
app/src/main/kotlin/com/metrolist/music/db/: DatabaseDao.kt  MusicDatabase.kt
app/src/main/kotlin/com/metrolist/music/extensions/: ContextExt.kt  MediaItemExt.kt  PlayerExt.kt  StringExt.kt
app/src/main/kotlin/com/metrolist/music/listentogether/: ListenTogetherClient.kt  MessageCodec.kt
app/src/main/kotlin/com/metrolist/music/lyrics/: BetterLyricsProvider.kt  KuGouLyricsProvider.kt  LrcLibLyricsProvider.kt  LyricsHelper.kt  LyricsPlusProvider.kt  LyricsProvider.kt  LyricsProviderRegistry.kt  LyricsTranslationHelper.kt  LyricsUtils.kt  NeteaseCloudMusicProvider.kt  PaxsenixLyricsProvider.kt  YouTubeLyricsProvider.kt  YouTubeSubtitleLyricsProvider.kt
app/src/main/kotlin/com/metrolist/music/models/: MediaMetadata.kt
app/src/main/kotlin/com/metrolist/music/playback/: DownloadUtil.kt  MediaLibrarySessionCallback.kt  MusicService.kt  PlayerConnection.kt  SleepTimer.kt
app/src/main/kotlin/com/metrolist/music/recognition/: RecognitionForegroundService.kt  RecognitionLaunchActivity.kt  VibraSignature.kt
app/src/main/kotlin/com/metrolist/music/utils/: CoilBitmapLoader.kt  DiscordRPC.kt  DownloadExportHelper.kt  SyncUtils.kt  YTPlayerUtils.kt
app/src/main/kotlin/com/metrolist/music/viewmodels/: AccountViewModel.kt  ArtistViewModel.kt  BackupRestoreViewModel.kt  HomeViewModel.kt  LibraryViewModels.kt  LocalFilesViewModel.kt  LyricsMenuViewModel.kt  LyricsViewModel.kt  OnlinePlaylistViewModel.kt  OnlinePodcastViewModel.kt  OnlineSearchViewModel.kt  StatsViewModel.kt
app/src/main/kotlin/com/metrolist/music/widget/: MetrolistWidgetManager.kt
app/src/main/kotlin/com/metrolist/netease/: NeteaseCloudMusicLyricsProvider.kt
app/src/main/res/drawable/: ic_android_auto.xml  ic_launcher_background_v31.xml  ic_launcher_foreground.xml  ic_launcher_foreground_v31.xml  ic_launcher_monochrome.xml  small_icon.xml
app/src/main/res/values/: ic_launcher_background.xml  metrolist_strings.xml  strings.xml
app/src/main/res/values-ar/: metrolist_strings.xml
app/src/main/res/values-cs/: metrolist_strings.xml
app/src/main/res/values-de/: metrolist_strings.xml
app/src/main/res/values-es/: metrolist_strings.xml  strings.xml
app/src/main/res/values-fil/: strings.xml
app/src/main/res/values-fr/: metrolist_strings.xml
app/src/main/res/values-hu/: metrolist_strings.xml  strings.xml
app/src/main/res/values-in/: metrolist_strings.xml
app/src/main/res/values-it/: metrolist_strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-ja/: metrolist_strings.xml
app/src/main/res/values-ko/: metrolist_strings.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/values-pt-rBR/: metrolist_strings.xml  strings.xml
app/src/main/res/values-ro/: metrolist_strings.xml
app/src/main/res/values-ru/: metrolist_strings.xml
app/src/main/res/values-tr/: metrolist_strings.xml
app/src/main/res/values-vi/: metrolist_strings.xml
app/src/main/res/values-zh-rCN/: metrolist_strings.xml
betterlyrics/: build.gradle.kts
betterlyrics/src/main/kotlin/com/metrolist/music/betterlyrics/: TTMLParser.kt
docs/: spotify-gql-hashes.json
gradle/: libs.versions.toml
innertube/: build.gradle.kts
innertube/src/main/kotlin/com/metrolist/innertube/: InnerTube.kt  YouTube.kt
innertube/src/main/kotlin/com/metrolist/innertube/models/: MusicMultiRowListItemRenderer.kt  MusicResponsiveHeaderRenderer.kt  MusicResponsiveListItemRenderer.kt  YTItem.kt
innertube/src/main/kotlin/com/metrolist/innertube/pages/: HomePage.kt  LibraryPage.kt  NewPipe.kt  NextPage.kt  PlaylistPage.kt  PodcastPage.kt  RelatedPage.kt  SearchPage.kt  SearchSuggestionPage.kt  SearchSummaryPage.kt
kizzy/: build.gradle.kts
kugou/: build.gradle.kts
lastfm/: build.gradle.kts
lrclib/: build.gradle.kts
netease/: build.gradle.kts
netease/src/main/kotlin/com/metrolist/netease/: NeteaseCloudMusicLyricsProvider.kt
shazamkit/: build.gradle.kts
simpmusic/: build.gradle.kts
(+94 files in other folders)
